--- a/ToDo
+++ b/ToDo
@@ -1,2 +1,4 @@
 Прочитать про эволюционные методы https://cs.gmu.edu/~sean/book/metaheuristics/Essentials.pdf
-Разбираться в незнакомых пока терминах
+Разбираться в незнакомых терминах
+Читать книгу про соцсети
+Продолжать курс по соцсетям
