--- a/ToDo
+++ b/ToDo
@@ -1,4 +1,4 @@
-Прочитать про эволюционные методы https://cs.gmu.edu/~sean/book/metaheuristics/Essentials.pdf
-Разбираться в незнакомых терминах
-Читать книгу про соцсети
-Продолжать курс по соцсетям
+Продолжать курс http://leonidzhukov.net/hse/2014/socialnetworks/ (5+ лекции)
+Схожий курс https://www.coursera.org/learn/social-economic-networks Но все-таки с другой точки зрения
+https://psyarxiv.com/nm5sh/
+Читать параллельно с курсом Networks, Crowds, and Markets: Reasoning about a Highly Connected World
