--- a/ToDo
+++ b/ToDo
@@ -1,5 +1,4 @@
-Продолжать курс http://leonidzhukov.net/hse/2014/socialnetworks/ (5+ лекции)
-Попробовать руками средства для работы с графами и сделать 2ое дз курса
-Схожий курс https://www.coursera.org/learn/social-economic-networks Но все-таки с другой точки зрения
-https://psyarxiv.com/nm5sh/
-Читать параллельно с курсом Networks, Crowds, and Markets: Reasoning about a Highly Connected World
+Пробовать DBSCAN
+Визуализация с помощью OpenGl
+данные в архив
+обзор литературы
