--- a/ToDo
+++ b/ToDo
@@ -1,12 +1,17 @@
+выложить код и результаты локальных алгоритмов
+
+
+
 Код:
 1. Написать метрику с учетом вытянутость вдоль радиальной оси
 2. Применить DBSCAN сравнить результаты с локальными алгоритмами
 3. Улучшить результат локальных алгоритмов (посмотерть в интернетах)
-3. Обработать пустые зоны/разделить данные (?)
+4. Обработать пустые зоны/разделить данные (?)
 
-Текст курсовойЖ
+Текст курсовой
 0. Начать писать)
 1. Постановка задачи (физический смысл - математическая формализация)
 2. Интерпритация результатов
 3. Обзор литературы
-4. Алгориты решения ...
+4. Красивый картинки
+5. Алгориты решения ...
