--- a/DBSCAN.ipynb
+++ b/DBSCAN.ipynb
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "import scipy.stats as stats\n",
     "\n",
-    "from sklearn.cluster import DBSCAN, k\n",
+    "from sklearn.cluster import DBSCAN\n",
     "from sklearn.neighbors import NearestNeighbors as nn\n",
     "import sklearn"
    ]
