Need only abstract, some results and conclusion

--- a/report/Clusters Demin 317.tex
+++ b/report/Clusters Demin 317.tex
@@ -11,6 +11,7 @@
 \usepackage{algorithm}
 \usepackage{algpseudocode}
 \usepackage{algorithmicx}
+\usepackage{enumitem}
 
 
 \usepackage{comment}
@@ -34,6 +35,8 @@
 \widowpenalty=10000
 \renewcommand{\baselinestretch}{1.1}
 \renewcommand{\baselinestretch}{1.5} %для печати с большим интервалом
+
+\setlist[enumerate,itemize]{leftmargin=0pt,itemindent=2.7em}
 
 \begin{document}
 
@@ -212,22 +215,21 @@ OptimizeDBSCAN подбирает параметры для алгоритма D
 \section{Набор данных. Каталог SDSS}
 
 Продемонстрируем предлагаемый алгоритм на задаче выделения галактик по каталогу SDSS(\cite{SDSS}). Этот каталог содержит сферические координаты и некоторые физические величины более чем 3 миллионах галактик, наблюдаемых в северном полушарии Земли. \textbf{Расстояние} до галактики определяется с помощью измерения красного смещения электромагнитных волн, излучаемых ею, близкими считаются галактики, имеющие красное смещение меньше 0.3 (всюду далее под расстоянием до галактики мы будем подразумевать красное смещение этой галактики). Особенностью этих данных является то, что для галактик сильно удалённых от Земли погрешность вычислений координат достигает больших значений - это не позволяет их анализировать. \textbf{Кластером} (скоплением или глобуларом) называется набор галактик, расположенных близко друг к другу (более точного определения дать не удаётся, так как объективные характеристики, по которым можно было бы определить что явлется кластером, а что нет, пока в астрофизике не определены). Считается также, что галактика принадлежит либо принадлежит только одному кластеру, либо не принадлежит никакому (таких галактик большинство и мы будем называть их шумовыми).
-
+Ожидается, что кластеры будут сферической или элипсовидной формы
 
 \section{Эксперименты}
 \subsection{Априорные представления и их формализация}
 
-В качестве априорных представлений о струтуре данных мы возьмём каталог скоплений галактик, составленный Дж.~Эйбеллом (\cite{Abell}). Американский астроном вручную проанализировал фотопластины северной части звёздного неба и выделил 2712\footnote{не всё так просто} кластеров. Так как это было сделано по фотометрическим данным, нельзя сказать, что координаты выделенных кластеров точны. Мы будем использовать 2 факта из работы астронома: во-первых, будем считать число кластеров приближённо известным, во-вторых, характерный размер кластера примерно 100-150 галактик.
-
-Формализуем эту информацию таким образом
+В качестве априорных представлений о струтуре кластеров мы возьмём результаты работы Дж.~Эйбелла \cite{Abell}. Американский астроном вручную проанализировал фотопластины северной части звёздного неба и выделил 2712 кластеров. Так как это было сделано по фотометрическим данным, нельзя сказать, что координаты выделенных кластеров точны. Мы будем использовать 2 факта из работы физика: число кластеров приближённо известно и равно 1570\footnote{Каталог SDSS покрывает не все области видимого неба, поэтому ожидается меньшее число кластеров}, характерный размер кластера примерно 125-175 галактик.
+Обозначим за $N(k)$ количество объектов в кластере с номером $k$, и фоормализуем априорную информацию таким образом
 \begin{equation}\label{F_num_clusters}
-  F_1(Y, K) = F_1(|Y|, K) = K -  1572\cdot \frac{|Y|}{|X|} = 0
+  F_1(Y, K) = F_1(|Y|, K) = |K -  1572\cdot \frac{|Y|}{|X|}| - 50  \leq 0
 \end{equation}
 \begin{equation}\label{F_num_in1cluster}
-  F_2(Y, K) = F_1(|Y|, K) = \sum_{k=1}^K \left(\sum_{Y_i}^{} \left([Y_i==k]-125\right)^2\right) = 0
+  F_2(Y, K) =  F_2(N(1), \dots, N(K), K) = \frac{1}{K} \sum_{k=1}^K \left( | N(k) -150 | - 50 \right)  \leq 0
 \end{equation}
 
-Конечно, записанная в таком виде априорная информация выглядит ультимативно, однако равенства в (\ref{F_num_clusters}), (\ref{F_num_in1cluster}), да и в \ref{features} нужно понимать как приближённые. Исходя их этого построим функцию потерь для оптимизации DBSCAN. Будем штрафовать алгоритм, если он выделяет не то количество кластеров, которое нам нужно и если в кластерах оказывается намного больше или меньше галактик, чем предполагалось. Для этого хорошо подходит квадратичная функция. Обозначим за $N(k)$ количество объектов в кластере с номером $k$.
+Неравенства (\ref{F_num_clusters}) и (\ref{F_num_in1cluster}) не стоит понимать строго: это лишь наши предположения, они могут нарушаться. Исходя их этого построим функцию потерь для оптимизации DBSCAN. Будем штрафовать алгоритм, если он выделяет не то количество кластеров, которое нам нужно и если в кластерах оказывается намного больше или меньше галактик, чем предполагалось. Для этого хорошо подходит квадратичная функция. 
 $$f_1(K) = a_1K^2 + b_1K + c_1$$
 $$f_2(N(i)) = a_2N(i)^2 + b_2N(i) + c_2$$
 
@@ -253,26 +255,76 @@ $$f_2(N(i)) = a_2N(i)^2 + b_2N(i) + c_2$$
 \end{equation}
 
 
-Ясно, что получается 2 СЛАУ. Заметим, что мы полагаем квадратичную функцию равной нулю в точках с ожидаемым значением, и накладываем некоторый штраф в точках, удалённых на 50 от ожидаемого значения --- этот отступ, как и штрафы вообще говоря, конечно, можно выбирать по-другому.
+Ясно, что получается 2 СЛАУ, коэффициенты которых легко находятся. Заметим, что мы полагаем квадратичную функцию равной нулю в точках с ожидаемым значением, и накладываем некоторый штраф в точках, удалённых на 50 от ожидаемого значения --- этот отступ, как и штрафы, вообще говоря, можно выбирать по-другому. Введём, наконец, функции потерь.
 
-LossFunc1 $= \mathfrak{L}(N(1), \dots, N(K), K) = f_1(K) + \frac{1}{K} \sum_{i=1}^{K}f_2(N(i))$
+LossFunc2 $=\mathfrak{L}_2(Y, K) = \underset{i}{arg}\{N(i)>T\}$ 
 
-LossFunc2 определим как номера $T$ кластеров, содержащих наибольшее число галактик\footnote{Строго математически это можно записать как $ \underset{i}{arg}\{N(i) |\{N(j) | N(i) > N(j)\}| < K-T\} $}
+LossFunc1 $= \mathfrak{L}_1(Y, K) = f_1(K) + \frac{1}{K} \sum_{i=1}^{K \backslash \mathfrak{L}_2(Y, K)}f_2(N(i))$
+
+Эти функции с одной стороны учитывают априорные условия и с другой учитывают то, что данные имеют неоднородною плотность. Действительно, мы настраиваем DBSCAN таким образом, чтобы кластеры получались характерного небольшого размера, но если какой-то кластер получается слишком большим, мы его не учитываем и не штрафуем за него, вместо этого считаем, что распределение объектов, входящих в него имеет большую плотность и требуется для них подобрать другие параметры. Заметим, что мы никак не штрафуем количество галактик, которые определяются как шумовые, так как ограничения на количество объектов в каждом кластере и на количество самих кластеров по сути учитывают это.
+
+
+возвращает номера кастеров, количество объектов в которых больше некоторого порога. Эта функция отражает условие неоднородности плотности данных: действительно, установив порог достаточно большим (например, в 10 раз больше ожидаемого числа кластеров), мы получим кластеры, в которых оказалось слишком много галактик. Ясно, что плотность распределения объектов, попавших в эти кластеры больше, чем средняя плотность по всей выборке, однако мы считаем, что это может
+
+
 
 \subsection{Применённые алгоритмы}
 
+Мы будем сравнивать результаты работы 3 основных алгоритмов
+\begin{itemize}
+    \item
+        Mean shift
+    \item
+        Mini Batch K-means (спецификация K- means, которая для пересчёта центра кластера на каждой итерации использует не все объекты, принадлежащие ему, а лишь некоторую их подвыборку, что очень ускоряет алгоритм)
+    \item
+        Предложенный алгоритм оптимизации DBSCAN с дополнительным подбором параметров на областях с высокой плотностью
+\end{itemize}
 
-\subsection{Обсуждение и~выводы}
-Приводятся выводы:
-в~какой степени результаты экспериментов согласуются с~теорией?
-Достигнут ли желаемый результат?
-Обнаружены ли какие-либо факты, не~нашедшие объяснения, и~которые нельзя списать на «грязный» эксперимент?
+\subsection{Метрики качества}
+Для задачи кластеризации с неизвестным числом кластеров существуют несколько коэффициентов, в какой-то мере описывающих резульат
 
-Обсуждаются основные отличия предложенных методов от известных ранее.
-В~чем их преимущества?
-Каковы границы их применимости?
-Какие проблемы удалось решить, а~какие остались открытыми?
-Какие возникли новые постановки задач?
+\begin{itemize}
+  \item Silhouette Coefficient
+  \item Davies-Bouldin Index
+  \item Calinski-Harabasz Index (Variance Ratio Criterion) 
+  $$s(K)= \frac{Tr(B_k)}{Tr(W_k)} \times \frac{|X|-K}{K-1}$$
+  где $B_k$ - матрица дисперсий центров кластеров, $W_k$ - сумма матриц дисперсий всех кластеров
+  
+  $$B_k = \sum_{k}^{}N(k)(c_k-c)(c_k-c)^\mathrm{T}$$
+  $$W_k = \sum_{k=1}^{K}\sum_{x:y(x)=k}^{}(x-c_k)(x-c_k)^\mathrm{T}$$
+  
+  $c_k$ - центр $k$-го кластера, $c$ - центра всех объектов. Подразумевается, что метрика расстояний между объектами (и соответсвенно кластерами) - евклидова.
+  Чем $s(K)$, тем лучше результат кластеризации. Дейсвительно максимизация $s(K)$ равносильна максимизации дисперсий распределения центров кластеров (то есть, чем более центры кластеров будут разбросаны, тем лучше) и в то же время минимизации дисперсий распределения в объектов в каждом кластере (чем компактнее расположены объекты, тем лучше). 
+  
+  Все эти 3 коэффициента дают лучшие значение для выпуклых сферических кластеров с евклидовой метрикой. Это подходит для нашей задачи.
+   
+   Отметим то, что обысно DBSCAN не склонен выделять кластеры сферической формы, его главное преимущество состоит в том, что он способен распознавать кластеры производной формы.
+\end{itemize}
+
+\subsection{Сравнения методов}
+ 
+\begin{table}[H]
+\begin{center}
+\begin{tabular}{|l|l|l|l|l|}
+\hline
+                    & \# subareas & silhouette & (C-H) / $10^3$ & ($1 -$ D-B) \\ \hline
+Mean Shift          & 4           & 0.34       & 21       & 0.15      \\ \hline
+Mini Batch K-means  & 4           & 0.22       & \textbf{49}       & -0.1      \\ \hline
+optimized DBSCAN    & 5           & 0.11       & 12       & 0.23      \\
+optimized DBSCAN NH & 5           & \textbf{0.42}       & 41       & \textbf{0.32}      \\ \hline
+optimized DBSCAN    & 4           & 0.13       & 17       & 0.23      \\
+optimized DBSCAN NH & 4           & \textbf{0.49}       & \textbf{59}       & \textbf{0.4}       \\ \hline
+\end{tabular}
+\caption{Сравнение метод кластеризации}\label{all_methods}
+\end{center}
+\end{table}
+ 
+ В Таблице \ref{all_methods} приведены результаты работы различных методов. Колонка \#subareas показывает насколько частей делилась исходная выборка; silhouette содержит значения соответствующего коэффициента; колонка C-H$/10^3$ заполнена значениями Calinski-Harabasz Index, делёнными на 1000; (1-DB) - Davies–Bouldin index, вычтенные из 1 (так как лучшей классификации соответствует меньшее значение, применяем такое преобразование для согласованности с другими индексами). optimized DBSCAN - это оптимизированный алгоритм без дополнительного подбора параметров на областях, соответствующих большим кластерам; optimized DBSCAN NH - с дополнительным подбором и разбиением соответсвующих областей.
+ 
+Мы видим, что простой подбор 
+
+
+
 
 \section{Заключение}
 
@@ -337,15 +389,6 @@ DATA FROM THE SDSS-IV SURVEY MAPPING NEARBY GALAXIES AT APACHE POINT OBSERVATORY
 \bibitem{Abell}
 Abell, G. O. (1958).''The distribution of rich clusters of galaxies. A catalogue of 2712 rich clusters found on the National Geographic Society Palomar Observatory Sky Survey''. The Astrophysical Journal Supplement Series, 3,: 211—288.
 
-
-\bibitem{q}
-q
-
-\bibitem{q}
-q
-
-\bibitem{q}
-q
 
 \bibitem{q}
 q
